code trang chủ thêm fullscreen AndroidManifest.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PlantShop</string>
+    <string name="content_Banner">Plant\'S - toả sáng không gian nhà bạn</string>
 </resources>
