--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">PlantShop</string>
     <string name="content_Banner">Plant\'S - toả sáng không gian nhà bạn</string>
+    <string name="plant_Name">Spider Plant</string>
+    <string name="plant_Type">Ưa bóng</string>
+    <string name="plant_Price">250.000đ</string>
 </resources>
