fix code and xử lý chức năng quên mật khẩu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     //login
     <string name="lb_login">Mua sắm và trải nghiệm sản phẩm cây trồng</string>
+    <string name="channel_name">Thông báo</string>
+    <string name="channel_description">Đây là thông báo</string>
 </resources>
